--- a/package.xml
+++ b/package.xml
@@ -9,6 +9,6 @@
 
     <buildtool_depend>catkin</buildtool_depend>
     <buildtool_depend>catkin_simple</buildtool_depend>
-    <buildtool_depend>opencv_catkin</buildtool_depend>
+    <buildtool_depend>opencv3_catkin</buildtool_depend>
 
 </package>
